Sun Apr 22 21:59:04 2001  George Lebl <jirka@5z.com>

	* extern.[ch]:  When an applet doesn't want session saving, don't
	  bother trying to restart it.

	* extern.[ch], session.c, panel.c, menu.c, launcher.c, applet.c:
	  Save last location for a goad_id, and if an applet was started
	  without specifying a position, then use this one.  This makes say
	  the xchat applet always show up at the same place.  It also
	  makes re-adding applets smarter.

Sun Apr 22 20:13:03 2001  George Lebl <jirka@5z.com>

	* applet-widget.c:  be clearer in applet_widget_init function docs

	* basep-widget.c:  when leave happens remove the entry timeout and
	  viceversa to avoid states when things don't show or don't hide

Sat Apr 21 22:12:14 2001  George Lebl <jirka@5z.com>

	* extern.c:  actually save the panel unique id with externs

Sat Apr 21 11:38:36 2001  George Lebl <jirka@5z.com>

	* icon-entry-hack.[ch], menu-properties.c, gnome-panel-properties.c,
	  panel-util.c:  Sync entries at beginning in idle, and after entry
	  change.  This way the initial setting actually works for
	  everything, also ass a set_icon hack to do this as well.

Thu Apr 19 15:58:19 2001  George Lebl <jirka@5z.com>

	* multiscreen-stuff.[ch], foobar-widget.[ch], main.c,
	  basep-widget.[ch], edge-widget.c, aligned-widget.c,
	  Makefile.am, floating-widget.c, menu.c, scroll-menu.[ch],
	  sliding-widget.c:  Begin on multiscreen stuff.  Currently
	  just trying to get the screen size and position abstraction
	  happening, just the very beginnings.  However it still works
	  just like before as right now it always inits to one large
	  screen.

	* button-widget.c:  Fix the overlay window geometry calculation
	  near panel edge

	* foobar-widget.c:  Apparently users got utterly confused as to what
	  the flower meant and most thought it was a fried egg.  So I changed
	  it to the gnome foot as it servers a similar purpose as the main
	  menu on a normal panel so it's more consistent.
