@@ -1,3 +1,9 @@
+Tue Apr 24 13:41:08 2001  George Lebl <jirka@5z.com>
+
+	* session.c:  Most people hate the lock/logout buttons for their
+	  uselessness.  So in the default config I replaced it with the
+	  most useful applet of them all.  Fish.
+
 Sun Apr 22 21:59:04 2001  George Lebl <jirka@5z.com>
 
 	* extern.[ch]:  When an applet doesn't want session saving, don't
